--- a/config/application.properties
+++ b/config/application.properties
@@ -1,3 +1,5 @@
+filePath=database.dat
+repository=inmem
 datasource.url=jdbc:sqlserver://localhost;databaseName=flight_mgmt;encrypt=true;trustServerCertificate=true
 datasource.username=flight_mgmt
 datasource.password=flight_mgmt
