implemented http client server

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,6 @@ include 'app-socket-client'
 include 'app-socket-server'
 include 'transport-model'
 include 'application-context'
+include 'app-http-client'
+include 'app-http-server'
 include 'app-standalone'
