implemented http client server

--- a/config/application.properties
+++ b/config/application.properties
@@ -3,3 +3,4 @@ filePath=database.dat
 datasource.url=jdbc:sqlserver://localhost;databaseName=flight_mgmt;encrypt=true;trustServerCertificate=true
 datasource.username=flight_mgmt
 datasource.password=flight_mgmt
+restApiBaseUri=http://localhost:8080
