--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -36,10 +36,10 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build and Assemble Uber Jars
-        if: github.ref != 'refs/tags/*'
+        if: "!startsWith(github.ref, 'refs/tags/')"
         run: ./gradlew clean build uberJar
       - name: Build and Assemble Uber Jars
-        if: github.ref == 'refs/tags/*'
+        if: "startsWith(github.ref, 'refs/tags/')"
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}  # Remove the 'refs/tags/' prefix
           ./gradlew clean build uberJar -Pproject_version=$TAG_NAME
