--- a/app-standalone/build.gradle
+++ b/app-standalone/build.gradle
@@ -1,10 +1,11 @@
 dependencies {
     implementation project(':domain-core')
     implementation project(':cli')
-    implementation project(':application-context')
     implementation project(':jdbc-repository')
     implementation project(':inmem-repository')
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+    implementation 'com.github.eduardismund:application-context'
+
 }
 
 tasks.named('pitest') {
