--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     implementation project(':domain-core')
-    compileOnly project(':application-context')
+    compileOnly 'com.github.eduardismund:application-context'
 }
