replaced in house DI container with Spring's GenericApplicationContext

--- a/app-http-server/build.gradle
+++ b/app-http-server/build.gradle
@@ -1,12 +1,14 @@
 dependencies {
+    implementation project(':app-ctx-infra')
     implementation project(':domain-core')
     implementation project(':transport-model')
-    implementation project(':jdbc-repository')
-    implementation project(':inmem-repository')
+    runtimeOnly project(':jdbc-repository')
+    runtimeOnly project(':inmem-repository')
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
     compileOnly 'jakarta.xml.bind:jakarta.xml.bind-api'
     runtimeOnly 'org.glassfish.jaxb:jaxb-runtime'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.3'
     compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
-    implementation 'com.github.eduardismund:application-context'
+    implementation 'org.springframework:spring-context'
+
 }
