--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ subprojects { subproject ->
         junit5PluginVersion = '1.2.0'
         targetClasses = ['ro.eduardismund.*']
         excludedClasses = ['ro.eduardismund.flightmgmt.app.*App',
-                           'ro.eduardismund.flightmgmt.app.ClientSocketComponentFactory']
+                           'ro.eduardismund.flightmgmt.app.ClientSocketSupplier']
         targetTests = ['ro.eduardismund.*']
-        excludedTestClasses = ['ro.eduardismund.flightmgmt.app.ClientSocketComponentFactoryConnectTest']
+        excludedTestClasses = ['ro.eduardismund.flightmgmt.app.ClientSocketSupplierConnectTest']
         mutationThreshold = 100
         outputFormats = ['HTML']
         timestampedReports = false
@@ -34,16 +34,6 @@ subprojects { subproject ->
 
     repositories {
         mavenCentral()
-        maven {
-            url = uri("https://maven.pkg.github.com/Eduardismund/application-context")
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
-            }
-            content {
-                includeGroup("com.github.eduardismund")
-            }
-        }
     }
 
     def uberJarSubprojects = ['app-standalone', 'app-socket-server', 'app-socket-client', 'app-http-server', 'app-http-client']
@@ -94,8 +84,7 @@ subprojects { subproject ->
             api 'com.microsoft.sqlserver:mssql-jdbc:12.8.1.jre11'
             api 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
             api 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
-            api 'com.github.eduardismund:application-context:0.0.0'
-
+            api 'org.springframework:spring-context:6.1.5'
         }
         compileOnly 'org.projectlombok:lombok:1.18.34'
         compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs.toolVersion.get()}"
