--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,9 @@
-repository=jdbc
+repository=inmem
 filePath=database.dat
 datasource.url=jdbc:sqlserver://localhost;databaseName=flight_mgmt;encrypt=true;trustServerCertificate=true
 datasource.username=flight_mgmt
 datasource.password=flight_mgmt
-restApiBaseUri=http://localhost:8080
+restApiBaseUri=http://localhost:8081
+socketServer.port=6000
+serverSocket.host=localhost
+serverHttp.port=8081
