--- a/app-socket-client/build.gradle
+++ b/app-socket-client/build.gradle
@@ -1,9 +1,11 @@
 dependencies {
+    implementation project(':app-ctx-infra')
+    implementation project(':cli')
     implementation project(':domain-core')
     implementation project(':transport-model')
-    implementation project(':cli')
     compileOnly 'jakarta.xml.bind:jakarta.xml.bind-api'
     runtimeOnly 'org.glassfish.jaxb:jaxb-runtime'
-    implementation 'com.github.eduardismund:application-context'
+    implementation 'org.springframework:spring-context'
+
 
 }
