--- a/app-standalone/build.gradle
+++ b/app-standalone/build.gradle
@@ -1,11 +1,11 @@
 dependencies {
+    implementation project(':app-ctx-infra')
     implementation project(':domain-core')
     implementation project(':cli')
-    implementation project(':jdbc-repository')
-    implementation project(':inmem-repository')
+    runtimeOnly project(':jdbc-repository')
+    runtimeOnly project(':inmem-repository')
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-    implementation 'com.github.eduardismund:application-context'
-
+    implementation 'org.springframework:spring-context'
 }
 
 tasks.named('pitest') {
